--- a/pachyderm-seldon/ALF-pipeline-secret.yaml
+++ b/pachyderm-seldon/ALF-pipeline-secret.yaml
@@ -2,12 +2,12 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: pipeline-secret
-  namespace: pach
+  namespace: default
 stringData:
-  det_master: 10.10.160.180:8081
+  det_master: 10.10.160.170:8081
   det_user: determined
   det_password: ""
   pac_token: ""
-  sel_url: http://10.10.160.183
-  sel_secret: ""
+  sel_url: http://10.10.160.173
+  sel_secret: "12341234"
   sel_namespace: seldon
