--- a/pachyderm-seldon/use-case/brain-mri/experiment/const.yaml
+++ b/pachyderm-seldon/use-case/brain-mri/experiment/const.yaml
@@ -1,5 +1,5 @@
 name: MRI-test1-on-prem-1GPU
-workspace: nanos 
+workspace: saurabh 
 project: brain-mri
 data:
   data_dir:  '/data'
@@ -48,4 +48,4 @@ profiling:
 #    read_only: False 
 checkpoint_storage:
   type: shared_fs
-  host_path: /mnt/mapr_nfs/edf.ailab.local/determined/det_checkpoints
+  host_path: /mnt/mapr_nfs/determined/det_checkpoints
