udpate the docker image for brain-mri

--- a/pachyderm-seldon/use-case/image-classification/pachctl-commands.yaml
+++ b/pachyderm-seldon/use-case/image-classification/pachctl-commands.yaml
@@ -40,3 +40,7 @@ pachctl create pipeline -f ALF-deployment-pipeline.json
 pachctl put file brain-mri-new@master:/data -f dataset/split/ss -r 
 
 docker build -t 10.10.160.143:9002/saurabh/brain-mri/train:0.0.11 .
+
+
+docker build -t 10.10.160.143:9002/saurabh/brain-mri/deploy:0.0.11 .
+docker push 10.10.160.143:9002/saurabh/brain-mri/deploy:0.0.11
